@@ -618,6 +618,7 @@ define function, begin
 596,runningonmac,0            # returns true if the device is Mac
 597,runningonlinux,0          # returns true if the device is Linux
 598,nextnpcreference,1,0      # Iterating over NPCs: reference to next NPC
+599,input string with mouse keyboard,2,0,-1 # pop up a virtual keyboard that responds to mouse clicks
 # Don't forget to update maxScriptCmdID in const.bi when adding new commands
 end
 
